--- a/app/components/blogInner/BlogInnerPage.module.css
+++ b/app/components/blogInner/BlogInnerPage.module.css
@@ -1,6 +1,6 @@
 .BlogInnerPage {
   position: relative;
-  padding: clamp(60px, 7vh, 7vh) 0;
+  padding: clamp(60px, 12vh, 12vh) 0;
   background-color: var(--color-white);
 }
 .BlogInnerPageRow {
