--- a/app/components/home1/TestimonialSlider.module.css
+++ b/app/components/home1/TestimonialSlider.module.css
@@ -1,6 +1,6 @@
 .testimonialSection {
   position: relative;
-  padding: clamp(60px, 7vh, 7vh) 0;
+  padding: clamp(60px, 12vh, 12vh) 0;
   background-color: var(--color-white);
   padding-top: 0;
 }
